# homeassistant-truenas-storage

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
custom_component/truenas_storage/: __init__.py  manifest.json  sensor.py
custom_component/truenas_storage/translations/: de.json  en.json
custom_components/truenas_storage/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  manifest.json
tests/: conftest.py  test_config_flow.py  test_sensor.py
