[project]
name = "homeassistant-truenas-storage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "homeassistant>=2025.4.4",
    "pytest>=8.3.5",
    "pytest-homeassistant-custom-component>=0.13.236",
    "requests>=2.32.3",
    "ruff>=0.11.8",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto" # See https://github.com/MatthewFlamm/pytest-homeassistant-custom-component/issues/158
asyncio_default_fixture_loop_scope = "function" # see https://github.com/pytest-dev/pytest-asyncio/issues/924

